fix issue with some draggable element names not completely visible by changing the font family

--- a/styles/sass/partials/_sidebar-ui.scss
+++ b/styles/sass/partials/_sidebar-ui.scss
@@ -648,7 +648,7 @@
 	width: 65px;
 	height: 65px;
 	float: left;
-	font-family: verdana;
+	font-family: 'Open Sans', Helvetica Neueu, Helvetica, Arial, sans-serif;
 	font-weight: 200;
 	font-size: 11px;
 	line-height: 24px;
